--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,11 @@ body {
 
 /* Top Container */
 .top-container {
-    display: grid;
+    display: flex;
+    flex: 0 1 auto;
 }
+
+
 
 .myimage-item {
     height: 100px;
