--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 /* Top Container */
 .top-container {
     display: flex;
-    margin-left: 22.5rem;
+    justify-content: center;
 }
 
 .top-name .myimage-item {
@@ -25,7 +25,3 @@ body {
     display: flex;
 }
 
-.bodyresume {
-    padding: 1rem;
-    border: .5rem solid black;
-}
